# wisetrader

./: .dockerignore  .env.dev  .env.example  .gitignore  ADDING_INDICATORS.md  BOT_COMMANDS_SUMMARY.md  COMPILATION_SUCCESS.md  Cargo.toml  DATABASE_TROUBLESHOOTING.md  FINAL_STATUS.md  FR poker.json  FREQTRADE_API_TEST.md  GEMINI_SETUP.md  IMPLEMENTATION_STATUS.md  INFRAS.md  LOGGING.md  MYSQL_CONNECTION_SUCCESS.md  MYSQL_FIX_SUMMARY.md  Makefile  NEXT_STEPS.md  README.md  README_COMPILATION.md  RUN_BOT.md  SETUP.md  TEST_BOT.md  TROUBLESHOOTING.md  WEBHOOK_SETUP.md  build.rs  deploy.sh  deploy.sh.example  docker-compose.yml  env.api.example
.cursor/: cursor_token.json
.memory_bank/: billing_plans.json  db.sql  project_meta.json  tech_choices.json  user_personas.json
api/: Cargo.toml
api/src/: main.rs
api/templates/: totp_setup.html  totp_setup_fragment.html
bot/: Cargo.toml  RELEASE.md  build.rs
bot/examples/: README.md  bot_set_commands.rs  rsi_bnbusdt.rs  rsi_bnbusdt_barter.rs  test_gemini.rs
bot/locales/: en.yml  vi.yml
bot/locales/en/: messages.yml
bot/locales/vi/: messages.yml
bot/src/: main.rs  state.rs
bot/src/commands/: admin.rs  ai.rs  backtest.rs  backtest_template.rs  create_strategy.rs  live_trading.rs  me.rs  mod.rs  payment.rs  pnl.rs  start.rs  start_trading.rs  strategy.rs  streams.rs  tokens.rs  trading.rs
bot/src/i18n/: mod.rs
bot/src/repositories/: user_repository.rs
bot/src/services/: gemini.rs  mod.rs  position_service.rs  preset_strategies.rs  strategy_service.rs  trading_signal.rs  user_service.rs
bot/src/services/strategy_engine/: executor.rs  implementations.rs  indicator_configs.rs  mod.rs  registry.rs  strategy.rs
docker/: Dockerfile.api  Dockerfile.bot  bot-updater.sh  entrypoint-bot.sh  fix-permissions.sh
docker/freqtrade/: config.json
docker/freqtrade/strategies/: .gitkeep  Default_RSI_Strategy_14.py  ElliotV8_original_ichiv2.py  MACDStrategy_crossed.py  RSI_4h_SOLUSDT_2.py  RSI_5m_BTCUSDT_3.py  RSI_5m_ETHUSDT_1.py  SampleStrategy.py  strategy_template.jinja
docker/mysql/: init.sql
freqtrade-rs/: Cargo.toml  FEATURES.md  IMPLEMENTATION_STATUS.md  README.md
freqtrade-rs/examples/: backtest_example.rs  rsi_strategy_example.rs
freqtrade-rs/src/: lib.rs
freqtrade-rs/src/backtest/: engine.rs  metrics.rs  mod.rs  report.rs
freqtrade-rs/src/config/: mod.rs  risk.rs  strategy.rs
freqtrade-rs/src/data/: candle.rs  mod.rs  storage.rs
freqtrade-rs/src/exchange/: client.rs  mod.rs  order.rs  streaming.rs
freqtrade-rs/src/indicators/: bb.rs  ema.rs  macd.rs  mod.rs  rsi.rs  sma.rs
freqtrade-rs/src/portfolio/: balance.rs  mod.rs  position.rs  risk.rs
freqtrade-rs/src/strategy/: base.rs  mod.rs  signal.rs  validator.rs
freqtrade-rs/src/strategy/implementations/: macd_strategy.rs  mod.rs  rsi_strategy.rs
freqtrade-rs/tests/: integration_test.rs  unit_test.rs
freqtrade_adapter/: Cargo.toml
freqtrade_adapter/src/: main.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20251029_000001_add_user_id_to_strategies.rs  m20251103_073712_add_content_to_strategies.rs  m20251106_000001_create_exchange_tokens.rs  m20251107_000001_create_live_trading_orders.rs  m20251108_000001_create_positions_and_trades.rs  m20251109_000001_rename_live_trading_orders_to_signals.rs  m20251110_000001_create_live_trading_sessions.rs
shared/: Cargo.toml  build.rs  sea-orm.conf
shared/migration/: Cargo.toml
shared/migration/src/: lib.rs  m20220101_000001_create_table.rs
shared/src/: config.rs  database.rs  freqtrade.rs  lib.rs  models.rs  redis.rs  templates.rs
shared/src/entity/: exchange_tokens.rs  live_trading_orders.rs  live_trading_sessions.rs  live_trading_signals.rs  mod.rs  positions.rs  prelude.rs  strategies.rs  trades.rs  users.rs
shared/templates/: ai_analysis.html.jinja  ai_analysis_section.html.jinja  backtest_report.html.jinja  strategy_template.py
