[workspace]
members = ["bot", "api", "shared"]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["mysql", "runtime-tokio-native-tls", "chrono", "uuid", "bigdecimal"] }
sea-orm = { version = "1.1.17", features = ["sqlx-mysql", "runtime-tokio-native-tls", "macros", "debug-print"] }
redis = { version = "0.32.7", features = ["tokio-comp"] }
chrono = { version = "0.4", features = ["clock", "serde"] }
chrono-tz = "0.9"
uuid = { version = "1.6", features = ["v4", "serde"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
teloxide = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
dotenv = "0.15"
base64 = "0.21"
aes-gcm = "0.10"
sha2 = "0.10"
pbkdf2 = "0.12"
hex = "0.4"
askama = "0.12"
askama_derive = "0.12"
reqwest = { version = "0.11", features = ["json"] }

