[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true, features = ["fs", "cors"] }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dotenv = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
chrono = { workspace = true }
uuid = { workspace = true }
totp-rs = { version = "5.7.0", features = ["gen_secret", "qr","otpauth"] }
askama = "0.12"
base64 = "0.21"
base32 = "0.4"
rand = "0.8"
axum-extra = { version = "0.9", features = ["form"] }

