[package]
name = "bot"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[[bin]]
name = "bot"
path = "src/main.rs"

[dependencies]
shared = { path = "../shared" }
log = "0.4.27"
pretty_env_logger = "0.5.0"
home = "0.5.5"
teloxide = { version = "0.17.0", features = ["full"] }
tokio = { version = "1.45.0", features = ["full"] }
url = "2.5.4"
anyhow = "1.0.99"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "ansi", "env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
dotenv = { workspace = true }
serde_json = { workspace = true }
sea-orm = { version = "1.1.17", features = [ "sqlx-mysql", "runtime-tokio-native-tls", "macros", "debug-print" ] }
askama = "0.12"
rust-i18n = "3.1"
reqwest = { version = "0.11", features = ["json"] }
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true, features = ["cors", "trace"] }

# For barter-rs examples
barter-data = "0.10.2"
barter-instrument = "0.3.1"
futures = "0.3"

# For technical analysis
ta = "0.5"
# For Decimal types (used in positions/trades entities)
rust_decimal = { workspace = true, features = ["std"] }

[[example]]
name = "rsi_bnbusdt"
path = "examples/rsi_bnbusdt.rs"

[[example]]
name = "rsi_bnbusdt_barter"
path = "examples/rsi_bnbusdt_barter.rs"

[[example]]
name = "test_gemini"
path = "examples/test_gemini.rs"